--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,7 +213,7 @@ a {
 .insert-txt-con {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
+  text-align: left;
 }
 .vl-insert {
   border-left: #ddd solid 1px;
@@ -262,9 +262,10 @@ a {
   border: 1px grey solid;
   border-radius: 33px;
   align-items: center;
-  padding: 8px 22px;
+  padding: 8px 8px;
   justify-content: space-between;
   height: 30px;
+  gap: 5px;
 }
 .hr-arrows {
   width: 300px;
@@ -349,7 +350,7 @@ a {
 }
 .featured-item-content {
   display: flex;
-  gap: 40px;
+  gap: 14px;
 }
 .featured-item-content img {
   height: 150px;
@@ -383,6 +384,7 @@ a {
   justify-content: space-between;
   width: 100%;
   align-items: center;
+  margin-bottom: 30px;
 }
 .small-prod-item {
   width: 100%;
